--- a/exploration/notificaion-service-as-consumer/src/main/resources/application.properties
+++ b/exploration/notificaion-service-as-consumer/src/main/resources/application.properties
@@ -1,38 +1,38 @@
 spring.application.name=notification-service-as-consumer
 
 # Server Configuration
-server.port=8081
+server.port=8082
 
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
-# Kafka Consumer Configuration
-spring.kafka.consumer.group-id=notification-service-group
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JacksonJsonDeserializer
-
-# Auto offset commit (default)
-spring.kafka.consumer.enable-auto-commit=true
-spring.kafka.consumer.auto-commit-interval=1000
-
-# Start from beginning if no offset exists
-spring.kafka.consumer.auto-offset-reset=earliest
-
-# JSON deserializer configuration
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.properties.spring.json.type.mapping=orderPlacedEvent:in.codefarm.notification.service.as.consumer.event.OrderPlacedEvent
-
-# Session timeout
-spring.kafka.consumer.properties.session.timeout.ms=30000
-
-# Heartbeat interval
-spring.kafka.consumer.properties.heartbeat.interval.ms=3000
-
-# Max poll records
-spring.kafka.consumer.properties.max.poll.records=500
-
-# Max poll interval
-spring.kafka.consumer.properties.max.poll.interval.ms=300000
+## Kafka Consumer Configuration, not to be conflicted with the custom java configurations, there should be one or the other
+#spring.kafka.consumer.group-id=notification-service-group
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JacksonJsonDeserializer
+#
+## Auto offset commit (default)
+#spring.kafka.consumer.enable-auto-commit=true
+#spring.kafka.consumer.auto-commit-interval=1000
+#
+## Start from beginning if no offset exists
+#spring.kafka.consumer.auto-offset-reset=earliest
+#
+## JSON deserializer configuration
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#spring.kafka.consumer.properties.spring.json.type.mapping=orderPlacedEvent:in.codefarm.notification.service.as.consumer.event.OrderPlacedEvent
+#
+## Session timeout
+#spring.kafka.consumer.properties.session.timeout.ms=30000
+#
+## Heartbeat interval
+#spring.kafka.consumer.properties.heartbeat.interval.ms=3000
+#
+## Max poll records
+#spring.kafka.consumer.properties.max.poll.records=500
+#
+## Max poll interval
+#spring.kafka.consumer.properties.max.poll.interval.ms=300000
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:notificationdb
