--- a/exploration/order-service-as-producer/src/main/resources/application.properties
+++ b/exploration/order-service-as-producer/src/main/resources/application.properties
@@ -6,16 +6,16 @@ server.port=8080
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
-# Kafka Producer Configuration
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JacksonJsonSerializer
-spring.kafka.producer.properties.spring.json.add.type.headers=false
-spring.kafka.producer.acks=all
-spring.kafka.producer.retries=3
-spring.kafka.producer.properties.retry.backoff.ms=1000
-spring.kafka.producer.batch-size=16384
-spring.kafka.producer.properties.linger.ms=10
-spring.kafka.producer.properties.enable.idempotence=true
+# Kafka Producer Configuration, not to be conflicted with the custom java configurations, there should be one or the other
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JacksonJsonSerializer
+#spring.kafka.producer.properties.spring.json.add.type.headers=false
+#spring.kafka.producer.acks=all
+#spring.kafka.producer.retries=3
+#spring.kafka.producer.properties.retry.backoff.ms=1000
+#spring.kafka.producer.batch-size=16384
+#spring.kafka.producer.properties.linger.ms=10
+#spring.kafka.producer.properties.enable.idempotence=true
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
